--- a/html/test2.html
+++ b/html/test2.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <title>My test page</title>
-  <link rel="stylesheet" href="test2.css">
+  <link rel="stylesheet" href="./test2.css">
 </head>
 
 <body>
