--- a/html/test.html
+++ b/html/test.html
@@ -196,7 +196,7 @@
         async function fetchData() {
             try {
                 // 讀取本機 json 檔案
-                const response = await fetch('data.json');
+                const response = await fetch('https://raw.githubusercontent.com/eric21364/eric21364.github.io/refs/heads/main/html/data.json');
                 if (!response.ok) throw new Error("無法讀取 JSON");
                 const data = await response.json();
                 renderPage(data);
